language/move-lang/tests/move_check/parser/global_access_pack.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/global_access_pack.move:3:9
  │
3 │         ::S { }
  │         ^^
  │         │
  │         Unexpected '::'
  │         Expected an expression term

